# crispy-forms-halfmoon

./: .envrc  .gitignore  manage.py  pyproject.toml
crispy_forms_halfmoon/: forms.py  settings.py
crispy_forms_halfmoon/templates/halfmoon/: betterform.html  display_form.html  field.html  inputs.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_forms_halfmoon/templates/halfmoon/layout/: baseinput.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  field_errors.html  field_file.html  fieldset.html  help_text_and_errors.html  prepended_appended_text.html  radioselect.html  select.html
tests/: test_crispy_forms_halfmoon.py
