[tool.poetry]
name = "crispy-forms-halfmoon"
version = "1.0.0"
description = "Crispy templates for halfmoon"
authors = ["Bailey Buscarino <foss@busc.dev>", "beaudinmatt@gmail.com <beaudinmatt@gmail.com>"]
packages = [
    { include="crispy_forms_halfmoon", from="." },
]
[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^4.2.18"
django-crispy-forms = "^2.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
target-version = ['py310']
exclude = '''
(
   /(
      \.venv
    | __pycache__
    | venv
   )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
